# steel_pipe_db

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_zh.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  SECURITY.md  config.ini  docker-compose.yml  main.py  summary.md  test.txt  钢管原料进出入库系统.bat
backend/: .env.example  AGENTS.md  AGENTS_zh.md  Cargo.toml  app.py  ca-bundle.crt  requirements.txt  seed_data.py  seed_data_enhanced.py
backend/.cargo/: config.toml
backend/migrations/: 001_create_users.sql  001_init.sql  002_create_seamless_pipes.sql  002_inventory_check.sql  003_create_screen_pipes.sql  003_label_print.sql  004_create_locations.sql  005_create_inventory.sql  006_create_orders.sql  007_create_quality.sql  008_create_logs.sql  009_create_ref_data.sql  010_seed_api_5ct_data.sql  011_add_rejection_reason.sql  012_add_indexes.sql  013_add_approval_reason.sql
backend/src/: AGENTS.md  AGENTS_zh.md  config.rs  error.rs  lib.rs  main.rs  response.rs  router.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: migrations.rs  mod.rs
backend/src/domain/: common.rs  inventory.rs  mod.rs  order.rs  pipe.rs  quality.rs
backend/src/domain/labels/: mod.rs
backend/src/dto/: auth_dto.rs  common.rs  contract_dto.rs  customer_dto.rs  data_io_dto.rs  inventory_dto.rs  label_dto.rs  mod.rs  pipe_dto.rs  purchase_dto.rs  quality_dto.rs  report_dto.rs  sales_dto.rs  supplier_dto.rs
backend/src/handler/: auth.rs  contracts.rs  data_io.rs  labels.rs  mod.rs  reports.rs
backend/src/handler/inventory/: mod.rs
backend/src/handler/pipes/: mod.rs
backend/src/handler/purchases/: mod.rs
backend/src/handler/quality/: mod.rs
backend/src/handlers/: AGENTS.md  AGENTS_zh.md  atp_handler.rs  auth_handler.rs  contract_handler.rs  customer_handler.rs  data_io_handler.rs  health_handler.rs  inventory_handler.rs  label_handler.rs  mod.rs  pipe_handler.rs  purchase_handler.rs  quality_handler.rs  report_handler.rs  sales_handler.rs  supplier_handler.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs
backend/src/models/: contract.rs  customer.rs  inventory.rs  mod.rs  purchase_order.rs  quality.rs  sales_order.rs  screen_pipe.rs  seamless_pipe.rs  supplier.rs  user.rs
backend/src/repositories/: AGENTS.md  AGENTS_zh.md  contract_repo.rs  customer_repo.rs  data_io_repo.rs  inventory_repo.rs  label_repo.rs  mod.rs  operation_log_repo.rs  pipe_repo.rs  purchase_order_repo.rs  quality_repo.rs  report_repo.rs  sales_order_repo.rs  supplier_repo.rs  user_repo.rs
backend/src/repository/: contract_repo.rs  inventory_repo.rs  label_repo.rs  mod.rs  pipe_repo.rs  purchase_repo.rs  quality_repo.rs  sales_repo.rs  user_repo.rs
backend/src/service/: auth_service.rs  contract_service.rs  data_io_service.rs  inventory_service.rs  label_service.rs  mod.rs  pipe_service.rs  purchase_service.rs  quality_service.rs  sales_service.rs
backend/src/services/: AGENTS.md  AGENTS_zh.md  auth_service.rs  check_service.rs  contract_service.rs  customer_service.rs  data_io_service.rs  inbound_service.rs  inventory_query_service.rs  inventory_service.rs  label_service.rs  location_service.rs  mod.rs  outbound_service.rs  pipe_service.rs  purchase_sales_service.rs  quality_service.rs  report_service.rs  supplier_service.rs  trace_service.rs
backend/tests/: auth_service_test.rs  contract_service_test.rs  customer_service_test.rs  data_io_service_test.rs  inventory_service_test.rs  label_service_test.rs  pipe_service_test.rs  purchase_sales_service_test.rs  quality_service_test.rs  report_service_test.rs  supplier_service_test.rs  trace_service_test.rs
backend/tests/common/: mod.rs
docs/: AGENTS.md  (+12 more)
projects/rust-axum-vue3/server/: .gitignore  Cargo.toml
rust_version/: .gitignore  Cargo.toml
rust_version/src/: app.rs  config.rs  database.rs  main.rs
(+312 files in other folders)
