[package]
name = "pipe-management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# UUID for IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Random salt generation (for argon2)
rand = "0.8"

# File handling
temporary = "0.5"

# Excel/CSV for data import/export
calamine = "0.26"
rust_xlsxwriter = "0.80"
csv = "1.3"
encoding_rs = "0.8"

# PDF for label printing
printpdf = "0.7"

# Image processing for embedding QR/barcode in PDF
image = { version = "0.25", default-features = false, features = ["png"] }

# Barcode/QR
# qr2 = "0.1"
# barcoder = "0.1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"
