[package]
name = "steel-pipe-db"
version = "0.1.0"
edition = "2021"
description = "API 5CT Seamless Steel Pipe & Screen Pipe Inventory Management System"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.19", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
calamine = "0.26"
rust_xlsxwriter = "0.80"
csv = "1.3"
