[package]
name = "steel_pipe_db"
version = "0.1.0"
edition = "2021"
description = "钢管原料进出入库管理系统 - 基于 Rust + egui + SQLite 的桌面应用"

[dependencies]
rusqlite = "0.29"
egui = "0.22"
eframe = "0.22"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
calamine = "0.23"
rust_xlsxwriter = "0.55"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "wingdi"] }
