[package]
name = "steel_pipe_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
thiserror = "1.0"
calamine = "0.23"
rust_xlsxwriter = "0.55"
tracing = "0.1"
tracing-subscriber = "0.3"
multipart = "0.18"
futures = "0.3"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.10"
